--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "build": "npm i"
   },
   "keywords": [],
